src/objects/CH_TimeRecording__c.object
<CustomObject>
    <description>NOKIASC-25946: Holds all Time Recording for Case/Problem Team Member against a Case.</description>
    <fields>
        <fullName>CH_CostCenterDescription__c</fullName>
        <description>NOKIASC-25946: To store Cost Center Description from User.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Center Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_CostCenter__c</fullName>
        <description>NOKIASC-25946: To store User Cost Center.</description>
        <formula>CH_UserName__r.User_Cost_Center__c</formula>
        <label>Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ExternalRecordNumber__c</fullName>
        <description>NOKIASC-25946: Field used to store External Record Number.</description>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>External Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CH_Organization__c</fullName>
        <description>NOKIASC-25946 -Set from the User Profile / Details  &quot;Department&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Role__c</fullName>
        <description>NOKIASC-25946: To store Owner or Role from the Case Team.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_StartDate__c</fullName>
        <description>NOKIASC-29116:This field is created to track start date for time recording record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_SupportTicketNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOKIASC-25946: To store Support Ticket Number.</description>
        <label>Support Ticket Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Recordings</relationshipLabel>
        <relationshipName>Time_Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_TimeSpent__c</fullName>
        <description>NOKIASC-25946: To store Time Spent per member.</description>
        <label>Time Spent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOKIASC-25946: To store User Name.</description>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Recording</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CH_SupportTicketNumber__c</columns>
        <columns>CH_Role__c</columns>
        <columns>CH_Organization__c</columns>
        <columns>CH_TimeSpent__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Recordings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CH_StartDate_not_Less_CaseReportedDat</fullName>
        <active>true</active>
        <description>NOKIASC-29116:Validate Start date value is later that Reported Date</description>
        <errorConditionFormula>CH_StartDate__c &lt; CH_SupportTicketNumber__r.CH_ReportedDate__c</errorConditionFormula>
        <errorMessage>Start Date for time tracking record must be later than reported date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_Start_Date_Can_Not_in_the_Future</fullName>
        <active>true</active>
        <description>NOKIASC-29116:The Start Date cannot be in the future date</description>
        <errorConditionFormula>CH_StartDate__c &gt; NOW()</errorConditionFormula>
        <errorMessage>Start Date can not in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>owner_cannot_be_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(
        ISNEW()),
    ISCHANGED(OwnerId)
)</errorConditionFormula>
        <errorMessage>Owner can not be changed.</errorMessage>
    </validationRules>
</CustomObject>