src/objects/CH_TimeRecording__c/validationRules/CH_Start_Date_Can_Not_in_the_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Start_Date_Can_Not_in_the_Future</fullName>
    <active>true</active>
    <description>NOKIASC-29116:The Start Date cannot be in the future date</description>
    <errorConditionFormula>CH_StartDate__c &gt; NOW()</errorConditionFormula>
    <errorMessage>Start Date can not in the future</errorMessage>
</ValidationRule>