src/objects/CH_TimeRecording__c/validationRules/CH_StartDate_not_Less_CaseReportedDat.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_StartDate_not_Less_CaseReportedDat</fullName>
    <active>true</active>
    <description>NOKIASC-29116:Validate Start date value is later that Reported Date</description>
    <errorConditionFormula>CH_StartDate__c &lt; CH_SupportTicketNumber__r.CH_ReportedDate__c</errorConditionFormula>
    <errorMessage>Start Date for time tracking record must be later than reported date</errorMessage>
</ValidationRule>