src/objects/CH_TimeRecording__c/validationRules/owner_cannot_be_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>owner_cannot_be_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(
        ISNEW()),
    ISCHANGED(OwnerId)
)</errorConditionFormula>
    <errorMessage>Owner can not be changed.</errorMessage>
</ValidationRule>